# whatsapp-notify

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  pyproject.toml
RF/: prompt-codex-gpt55-260606.md  prompt-codex-gpt55-260608.md  prompt-codex-gpt55-260610.md
src/: __init__.py  config.py  logging_config.py  main.py  whatsapp_service.py
src/api/: exception_handlers.py  exceptions.py  openapi.py  responses.py  server.py
src/api/handlers/: __init__.py  notification_handler.py
src/api/routers/: __init__.py  notification_router.py
src/api/schemas/: __init__.py  error_schema.py  notification_schema.py
src/app/: config.py  logger.py  main.py  whatsapp_service.py
src/app/domain/: __init__.py
src/app/repositories/: __init__.py
src/app/services/: __init__.py
src/domain/: __init__.py
src/domain/exceptions/: error.py
src/domain/models/: notification.py  session_status.py
src/pages/: __init__.py  i_base_page.py  pages.py
src/repositories/: __init__.py  i_notification_repository.py  playwright_notification_repository.py
src/services/: __init__.py  i_notification_service.py  notification_service.py  whatsapp_notification_service.py  whatsapp_session_service.py
tests/: test_coverage_edges.py  test_coverage_marker.py  test_logger.py  test_logging_config.py  test_main_helpers.py  test_notification_handler_session.py  test_pages.py  test_playwright_notification_repository.py  test_repositories.py  test_server_helpers.py  test_services.py  test_whatsapp_routes.py  test_whatsapp_session_service.py
(+1 files in other folders)
