[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-notify"
version = "0.1.0"
description = "API REST para enviar mensagens pelo WhatsApp Web usando Playwright."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "playwright>=1.44.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
whatsapp-notify = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "src/__init__.py",
    "src/main.py",
    "src/whatsapp_service.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true

